@@ -19,6 +19,11 @@ gui.verboseErrorDialog=true
 uploads.storeEmptyDirectories=true
 
 ###
+# Download properties for applications.
+###
+downloads.restoreLastModifiedDate=false
+
+###
 # S3Service properties
 ###
 s3service.https-only=true
